# ioc-hunter

./: Dockerfile.web  README.md  pyproject.toml  render.yaml  report.md
.github/workflows/: ci.yml
examples/: render_screenshots.py  sample-incident.txt
src/ioc_hunter/: __init__.py  cli.py  correlator.py  watcher.py
src/ioc_hunter/analyze/: __init__.py  archive.py  attack_map.py  authenticode.py  common.py  dispatcher.py  elf.py  embedded.py  evtx.py  heuristics.py  imphash.py  macho.py  markdown.py  ole.py  ooxml.py  pcap.py  pcap_auth.py  pcap_heur.py  pcap_parse.py  pcap_proto.py  pdf.py  pe.py  resources.py  rtf.py  vba.py
src/ioc_hunter/core/: __init__.py  eml.py
src/ioc_hunter/decoder/: __init__.py  magic.py  operations.py
src/ioc_hunter/rules/: __init__.py  _common.py  sigma.py  suricata.py
src/ioc_hunter/sources/: __init__.py  netmeta.py
src/ioc_hunter/web/: __init__.py  app.py  quota.py  rate_limit.py
src/ioc_hunter/web/static/: index.html  script.js  style.css
tests/: _binary_fixtures.py  _doc_fixtures.py  _evtx_fixtures.py  _pcap_fixtures.py  test_analyze_archive.py  test_analyze_common.py  test_analyze_dispatcher.py  test_analyze_elf.py  test_analyze_extensions.py  test_analyze_heuristics.py  test_analyze_macho.py  test_analyze_ole.py  test_analyze_ooxml.py  test_analyze_pcap_auth.py  test_analyze_pcap_e2e.py  test_analyze_pcap_heur.py  test_analyze_pcap_l7_e2e.py  test_analyze_pcap_parse.py  test_analyze_pcap_proto.py  test_analyze_pdf.py  test_analyze_pe.py  test_analyze_rtf.py  test_analyze_vba.py  test_cli.py  test_correlator.py  test_decoder.py  test_eml.py  test_rules.py  test_smoke.py  test_sources_netmeta.py  test_watcher.py  test_web.py
